sumo/tests/sumo/errors/routes/second_edge_false__emitteremission/errors.sumo
Error: The edge 'xxx' within route '0' is not known.
 The route can not be build.
Quitting (on error).
